2002-12-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Check for gtkmm >= 2.1.0 and #define
	REGEXXER_HAVE_GTKMM_22 if available.

	* src/controller.cc:
	* src/mainwindow.cc:
	* src/statusline.cc: If building for gtkmm >= 2.1.0, make use of
	atkmm to set names and descriptions of several GUI elements.

2002-12-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/Makefile.am (stockimages.h): Perfectionize so that it
	handles a case that actually never happens, but who knows who's
	going to copy'n'paste this stuff :P

2002-12-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/Makefile.am: Use shell magic to generate the build list
	for gdk-pixbuf-csource.  It's way cooler than doing it manually :)

2002-12-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (create_left_pane): Use 'd' instead of 'F'
	as mnemonic key for the folder button, because 'F' is already
	occupied by the file menu.

2002-12-01  Murray Cumming  <murrayc@usa.net>

	[ SF patch 646526, slightly modified ]

	* src/mainwindow.cc: Change the file pattern entry to a combo,
	with some commonly-used file extensions.

2002-12-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.cc (create_action_area):
	* src/mainwindow.cc (create_left_pane): Add preliminary support
	for accessibility using ATK.  Unfortunately atkmm is badly broken
	in a way that prevents it from being used at all.  And due to a
	missing reference in Gtk::Widget::get_accessible_vfunc() I can't
	even resort to the C interface for custom derived classes.  Thus
	most of the code is enclosed in #if 0 / #endif at the moment.

2002-11-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (on_selection_changed): Ooops, forgot to
	disconnect() conn_undo_stack_push_.  That means the mysterious
	one of the assertions is now fixed -- the remaining ones are
	expected :)

2002-11-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AC_INIT): Version 0.5.
